--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "MeleeCore"]
 	path = Plugins/MeleeCore
-	url = git@github.com:hakuhan/MeleeCore.git
+	url = https://github.com/hakuhan/MeleeCore.git
 [submodule "MindCore"]
 	path = Plugins/MindCore
-	url = git@github.com:hakuhan/MindCore.git
+	url = https://github.com/hakuhan/MindCore.git
 [submodule "StorySystem"]
 	path = Plugins/StorySystem
-	url = git@github.com:hakuhan/StorySystem.git
+	url = https://github.com/hakuhan/StorySystem.git
