--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -106,3 +106,17 @@ r.ReflectionMethod=1
 r.AllowGlobalClipPlane=False
 r.GenerateMeshDistanceFields=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=C16AA2A74A22D3F50F4D69A3A83C42FC
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
