--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -73,6 +73,12 @@ bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
+bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -104,8 +110,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="ViewTurn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="ViewHight",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="ViewTurn",Scale=1.000000,Key=Gamepad_RightX)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
